[package]
name = "intel-undervolt-rs"
version = "0.0.1"
authors = ["SaltyKitkat <954537646@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iur"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
clap="2.33.3"
libmedium = "0.5"