[package]
name = "iur"
version = "0.0.1"
authors = ["SaltyKitkat <954537646@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iur"
path = "src/bin/iur.rs"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "2.33", default-features = false, features = ["vec_map"]}
libmedium = "*"
num_cpus="*"
